# RAIDS_VIHAN

./: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  MULTILANGUAGE_MODULES.md  PRODUCTION.md  README.md  docker-compose.yml  netlify.toml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  start.py  vercel.json
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  init_db.py  session.py
app/ml/: __init__.py  severity_model.pkl  train.py
app/models/: __init__.py
app/routes/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
app/simulation/: __init__.py
app/websocket/: __init__.py  manager.py
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  database.py  main.py  requirements.txt  security.py  test_full_integration.py
backend/agents/: __init__.py  graph.py
backend/alembic/: env.py
docs/: data_methodology.md  deployment.md  ethics.md  multilingual_roadmap.md  non_technical_user_guide.md  production_architecture.md  production_hardening_audit.md  realtime_map_system.md  security.md  system_walkthrough.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
mobile_driver_java/: README.md
optimizer_cpp/: CMakeLists.txt  README.md
optimizer_cpp/src/: main.cpp
simulation_csharp/: Program.cs  README.md
tests/: conftest.py  test_api.py  test_dispatch_engine.py
(+212 files in other folders)
